DE-WDFT-MEX-Esteban-Gutierrez
Signed-off-by: Esteban <esteb.gtz.mtz@hotmail.com>

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+    <div class="blue-part">
+    </div>
+    <div class="phone-img">
+        <img src="./images/phones.png" alt="">
+    </div>
+    <div class="instagram-logo-and-login">
+        <img src="./images/brand.png" alt="">
+    </div>
+    <div class="information">
+        <h3>Capture and Share <br> the World's Moments</h3>
+        <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+            Twitter, Tumblr and more. It's a new way to see the world. <br>Oh yeah, did we mention it's free?
+        </p>
+    </div>
+    <div class="img-iphone-android">
+        <img src="./images/badge-iphone.png" alt="">
+        <img src="./images/badge-android.png" alt="">
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer class="footer">
+        <ul>
+            <li>ABOUT US</li>
+            <li>SUPPORT</li>
+            <li>BLOG</li>
+            <li>PRESS</li>
+            <li>API</li>
+            <li>JOBS</li>
+            <li>PRIVACY</li>
+            <li>TERMS</li>
+            <li id="gray-color-instagram">2014 INSTAGRAM</li>
+        </ul>
+    </footer>
 </body>
+
 </html>
