--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+  </header>
+  
+  <div class="body">
+    <div class="content">
 
-  Capture and Share the World's Moments
+      <img src="./images/phones.png" alt="">
+      <div class="info">
+        <div id="instagram">
+          <img id="brand" src="./images/brand.png" alt="">
+          <div id="btnLogin"><img src="./images/home.png" alt=""><span> Log in</span></div>
+        </div>
+        <div class="box">
+          <h3 id="title">
+            Capture and Share the World's Moments
+          </h3>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          </p><p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p><p>
+            Oh yeah, did we mention it's free?
+          </p>
+              <div>
+                <img src="./images/badge-iphone.png" alt="">
+                <img src="./images/badge-android.png" alt="">
+              </div>
+        </div>
+      </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
