--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="box">
           <h3 id="title">
-            Capture and Share the World's Moments
-          </h3>
+            Capture and Share 
+          </h3><h3>the World's Moments</h3>
           <p>
             Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
           </p><p>
