--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="contendor">
+    <header>  
+    </header>
+    <div class="iphone">
+      <img src="images/phones.png">
+    </div>
+    <div class="brandlog">
+      <img src="images/brand.png">
+    </div>
+    <div class="button">
+    <button class="but1"><img src="images/home.png">Log in</button>
+    </div>
+    <div class="textbox">
+    <h2>Capture and Share the World's Moments</h2>
+  
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+    Oh yeah, did we mention it's free?
+  
+    <img class="iphone1" src="images/badge-iphone.png">
+    <img src="images/badge-android.png">
+    </p>
+   </div>
+  <img class="background" src="images/frame.png">
+  </div>
+  <footer>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+   &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
