--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <div id="f-azul"></div>
+    <div class="linea">
+      <img src="./images/bgtile.png" alt="linea">
+    </div>
+    <div id="phone">
+      <img src="./images/phones.png" alt="phoneImg">
+    </div>
+    <div class="nav-insta">
+      <img src="./images/brand.png" alt="brandImg">
+    </div>
+    <div class="nav-homelogo">
+      <button>
+        <img src="./images/home.png" alt="homeButton"><strong> Log In</strong>
+      </button>
+    </div>
+    <div id="content">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>
+        Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        <br><br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br><br>
+        Oh yeah, did we mention it's free?
+      </p>
+      <div>
+        <ul>
+          <li>
+            <img src="./images/badge-iphone.png" alt="app_store">
+          </li>
+          <li>
+            <img src="./images/badge-android.png" alt="play_store">
+          </li>
+        </ul>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li><span>&copy; 2014 Instagram</span></li>
+      </ul>
+    </footer> 
+  </div>
 </body>
 </html>
