--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+  </header>
+  <div class="main-div">
+    <div>
+      <img id="phone-img" src="images/phones.png">
+      <div id="maintext-div">
+        <div class="align-center">
+          <img src="images/brand.png">
+          <button type="button"><img id="home" src="images/home.png">Log in</button>
+        </div>
+        <section class="section-">
+          <h4>Capture and Share the World's Moments</h4>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> 
+            way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and 
+            feel, then post to Instagram &mdash; it's that easy. You can even share to 
+            Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+           <img class="app-img" src="images/badge-iphone.png">
+           <img class="app-img" src="images/badge-android.png">
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="instagram-C">  &copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
