--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type= "text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="main-div">
+    <div id="phones">
+      <img src="../starter-code/images/phones.png" alt="Two iphones">
+    </div>
+    <div id="brand">
+      <img src="../starter-code/images/brand.png" alt="Instagram Icon">
+      <div>
+        <button type="button"><img src="../starter-code/images/home.png" alt="Home icon">Log in</button>
+      </div>
+    </div>
+    <div>
+      <div class="info-background">
+        <img src="../starter-code/images/frame.png" alt="frame">
+      </div>
+      <div class="info-text">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <button><img src="../starter-code/images/badge-iphone.png" alt="Iphone badge"></button>
+        <button><img src="../starter-code/images/badge-android.png" alt="Android badge"></button>
+      </div>
+    <div id="nav">
+      <footer>
+        <ul class="navbar">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </div>
+  </div>  
 </body>
 </html>
