--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<header>
+  <nav>
+<img class="foto1" src="https://github.com/isra-03/lab-css-instagram-clone/blob/master/starter-code/images/phones.png?raw=true" alt="defaul">
 
-  Capture and Share the World's Moments
+<a href="#" class="button blue">
+  <span class="icon-house"></span>Long in</a>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img src="https://github.com/isra-03/lab-css-instagram-clone/blob/master/starter-code/images/brand.png?raw=true"alt="defaul">
+<img src="https://github.com/isra-03/lab-css-instagram-clone/blob/master/starter-code/images/home.png?raw=true" alt="defaul">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="contenedor"> 
+  
+  <h1> Capture and Share the World's Moments </h1>
 
-  Oh yeah, did we mention it's free?
+   <div class="centrado">
+   <p> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p> 
+  
+<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+  
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?  </p>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+    
+    <img class="foto3" src="https://github.com/isra-03/lab-css-instagram-clone/blob/master/starter-code/images/badge-iphone.png?raw=true" alt="defaul">
+    <img class="foto4" src="https://github.com/isra-03/lab-css-instagram-clone/blob/master/starter-code/images/badge-android.png?raw=true" alt="defaul">
+  </div>
+   <ul> 
+    <li>About Us </li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>   
+    <li>API</li> 
+    <li>Jobs</li> 
+    <li>Privacy</li>
+    <li>Terms</li> 
+    <li id="pie">(c) 2014 Instagram</li>
+  </ul>
+</div>
+  </nav>
+</header>
 </body>
 </html>
