--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
+
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div id="div-f">
+  <img id="phones" src="images/phones.png" alt="phones">
+  <div>
+      <img class="logo" src="images/brand.png" alt="instagram log">
+      <button id="home"> <img src="images/home.png" alt="home"> Log in</button>
+  </div>
+  <section class="box">
+      <div class="title">
+          <h2> Capture and Share the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            
+              Oh yeah, did we mention it's free?margin-right: 20px;margin-right: 20px;
+            </p>
+            <div class="play-store">
+              <img src="images/badge-iphone.png" alt="iphone">
+              <img src="images/badge-android.png" alt="android">
+            </div>
+      </div>
+  </div>
+  </section>
+  <footer>
+      <ul>
+        <li >About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <h6> &copy; 2014 Instagram</h6>
+    </footer>
 </body>
-</html>
