--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
+
 <head>
   <title>Instagram</title>
+  <link rel='stylesheet' href='./css/main.css'>
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <img id='phones' src='images/phones.png' alt='phones'>
+  <section>
+    <img src='images/brand.png' alt='brand'>
+    <div id='home'>
+      <img src='images/home.png' alt='home'>
+      Log in
+    </div>
+    <div id="text">
+      <h1>Capture and Share <br> the World's Moments</h1>
+      <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <div id="donwload">
+        <img id='appleStore' src='images/badge-iphone.png' alt='appStore'>
+      </div>
+      <img id='googleStore' src='images/badge-android.png' alt='playStore'>
+    </div>
+  </section>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li></li>
+      <li id="copyRight">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
