--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,70 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">  
+
 </head>
-<body>
-  Instagram
+ <body>
 
-  Capture and Share the World's Moments
+   <header class="background-header">  </header>
+   
+   
+   <div class="main-container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="phones">
+        <img src="images/phones.png" alt="phone">
+        </div>
+  
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+       <div class="container-info">
 
-  Download on the App Store
-  Get it on Google Play
+          <div class="main-info-header">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            <img class="instagram-image" src="images/brand.png" alt="instagram">
+             <button  class="info-header-button">
+               <img src="images/home.png" alt="Log in button"> "Log in"
+               </button>
+          </div>
 
-  &copy; 2014 Instagram
+      <div class="info-image">
+ 
+          <h3>Capture and Share the World's Moments</h3>
+
+             <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. <br>
+
+                 Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+
+                 <br> Oh yeah, did we mention it's free?</p> 
+  
+                <img src="images/badge-iphone.png" alt="iphone">
+                <img src="images/badge-android.png" alt="android">
+      </div> 
+
+
+     </div>
+
+
+            <footer class= "footer">
+              <nav>
+                 <ul>
+                   <li>About Us</li>
+                   <li>Support</li>
+                   <li>Blog</li>
+                   <li>Press</li>
+                  <li>API</li>
+                   <li>Jobs</li>
+                   <li>Privacy</li>
+                   <li>Terms  </li>
+                   <li>&copy; 2014 Instagram</li>
+                  </ul>
+                  </nav>
+  
+              </footer>
+
+
+       </div>
+
 </body>
+
 </html>
