--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,63 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  <div class="back-blue">
+  <img src="./images/bgtile.png" alt="">
+  </div>
+  <div class="contenedor">
+<div class="brand">
+  <img src="images/brand.png" alt="marca" height="90%" width="90%">
+</div>
+<div class="button1">
+</div>
+<div class="button2">
+  <p>Log In</p>
+</div>
+<div class="buttonimg">
+  <img src="./images/home.png" alt="" height="120%" width="120%">
+</div>
+<div class="degradado">
+  <img src="./images/frame.png" alt="">
+</div>
+<div class="title-blue">
+    <h1>Capture and Share the World's Moments</h1>
+</div>
+<div class="phones">
+  <img src="./images/phones.png" alt="" height="90%" width="90%">
+</div>  
+<div class="texto">
+   <p>
+    Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+   </p>
+   <p>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+   </p>
+   <p>
+   Oh yeah, did we mention it's free?
+  </p>
+</div>
+<div class="dowload">
+  <img src="./images/badge-iphone.png" alt="">
+  <img src="./images/badge-android.png" alt="">
+</div> 
+<div class="list">
+  <ul class="lista">
+   <li><a href=”#” style="text-decoration:none;">About Us</a></li>
+   <li><a href=”#” style="text-decoration:none;">Support</a></li>
+   <li><a href=”#” style="text-decoration:none;">Blog</a></li>
+   <li><a href=”#” style="text-decoration:none;">Press</a></li>
+   <li><a href=”#” style="text-decoration:none;">API</a></li>
+   <li><a href=”#” style="text-decoration:none;">Jobs</a></li>
+   <li><a href=”#” style="text-decoration:none;">Privacy</a></li>
+   <li><a href=”#” style="text-decoration:none;">Terms</a></li>
+  </ul>
+</div> 
+<div class="copy">
   &copy; 2014 Instagram
+</div>
+</div>
 </body>
 </html>
