--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="main">
+      <header style="display: none;">Instagram</header>
+      <div id="right-box">
+        <div id="top-buttons">
+            <img id="brand" src="images/brand.png" alt="instagram logo">
+            <div id="login-button">
+              <img src="images/home.png">
+              <span>Log in</span>
+            </div>
+        </div>
+        <div id="info-box">
+            <div id="tittle-box"><h2>Capture and Share the World's Moments</h2></div>
+            <article>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</article>
+            <article>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</article>
+            <article>Oh yeah, did we mention it's free?</article>
+        </div>
+        <div id="bottom-buttons">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>  
+      <div id="left-box">
+        <img src="images/phones.png" alt="phone with picture">
+      </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <footer>
+          <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li id="copyright"> &copy; 2014 Instagram</li>
+          </ul>
+      </footer> 
+  </div>
 </body>
 </html>
