--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="fondo-top">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="phone-img">
+    <img src="./images/phones.png" alt="">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="insta-logo logear">
+    <img src="./images/brand.png" alt="">
+    <button><img src="./images/home.png" alt="">Log in</button>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="informacion">
+    <h3>Capture and Share <br> the World's Moments</h3>
+    <p>
+      Instagram is a fast, beautiful and fun way to share your life with friends and family. <br> Take a picture or
+      video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even
+      share to Facebook,
+      Twitter, Tumblr and more. It's a new way to see the world. <br>Oh yeah, did we mention it's free?
+    </p>
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="img-ios-android">
+    <img src="./images/badge-iphone.png" alt="">
+    <img src="./images/badge-android.png" alt="">
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer class="footer">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <ul>
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>    
+       <li>&copy; 2014 Instagram</li>
+    </ul>
+   
+  </footer>
 
-  &copy; 2014 Instagram
+ 
 </body>
+
 </html>
