--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="/starter-code/css/main.css">
+  </head>
 
-  Capture and Share the World's Moments
+  <!-- BODY -->
+  <body>
+    <!-- GRID -->
+    <section class="grid">
+      <!-- PHONES -->
+      <div class="phones">
+        <img src="/starter-code/images/phones.png" alt="Phones">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <!-- MAIN-BLOCK -->
+      <section class="main-block">
+        <!-- HEADER -->
+        <header>
+          <img src="/starter-code/images/brand.png" alt="Logo">
+          <button>
+            <img src="/starter-code/images/home.png" alt="Home">
+            <span>Log in</span>
+          </button>
+        </header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <!-- ARTICLE -->
+        <article>
+          <div>
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <button>
+            <img src="/starter-code/images/badge-iphone.png" alt="AppStore">
+          </button>
+          <button>
+            <img src="/starter-code/images/badge-android.png" alt="GooglePlay">
+          </button>
+        </article>
+      </section>
+    </section>
 
-  Oh yeah, did we mention it's free?
+    <!-- FOOTER -->
+    <footer>
+      <ul>
+        <li><a href="?">About Us</a></li>
+        <li><a href="?">Support</a></li>
+        <li><a href="?">Blog</a></li>
+        <li><a href="?">Press</a></li>
+        <li><a href="?">API</a></li>
+        <li><a href="?">Jobs</a></li>
+        <li><a href="?">Privacy</a></li>
+        <li><a href="?">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
 
+  </body>
+</html>
+
+<!--
   Download on the App Store
   Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+-->
