--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-    <div class="background container-first">
-      <img class="phone" src="./images/phones.png" alt="phones">
-      <div class="container-second">
-        <div>
-          <img src="./images/brand.png" alt="brand">
-          <button><img src="./images/home.png" alt="home"> Log in</button>
+  <head>
+    <title>Instagram</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/main.css" />
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <section>
+      <div class="container">
+        <div class="cellphone">
+          <img src="images/phones.png" alt="Download Instagram app" />
         </div>
-        <div class="frame">
-            <h1>Capture and Share the World's Moments
-            </h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="mainInfo">
+          <div class="instaLogin">
+            <img src="images/brand.png" alt="Instagram" />
 
-              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-            
-              Oh yeah, did we mention it's free?</p>
-        </div>
-        <div>
-          <img src="./images/badge-android.png" alt="androidbutton">
-          <img src="./images/badge-iphone.png"  alt="iphonebutton">
+            <button>
+              <a href="#"><span class="homeIcon"></span>Log in</a>
+            </button>
+          </div>
+          <div class="description">
+            <h3>Capture and Share the World's Moments</h3>
+            <p>
+              Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+              your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="store">
+            <img src="images/badge-iphone.png" alt="Download on App Store" />
+            <img src="images/badge-android.png" alt="Get it on Google Play" />
+          </div>
         </div>
       </div>
-    </div>
+    </section>
     <footer>
-      <a href="">About Us</a>
-      <a href="">Support</a>
-      <a href="">Blog</a>
-      <a href="">Press</a>
-      <a href="">API</a>
-      <a href="">Jobs</a>
-      <a href="">Privacy</a>
-      <a href="">Terms</a>
-      <span>&copy; 2014 Instagram</span>
+      <div class="container">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li><span class="copyrigth">&copy; 2014 Instagram</span></li>
+        </ul>
+      </div>
     </footer>
-  <!-- Instagram
-  Download on the App Store
-  Get it on Google Play
-
-  
-  
-  
-  
-  
-  
-  
-  
-
-   -->
-</body>
+  </body>
 </html>
