--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <!-- Title and info metas -->
+    <title>Instagram</title>
+    <meta name="description"
+      content="#">
+    <meta charset="UTF-8">
+    <!-- Styles -->
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <main class="display-flex">
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <section>
+      <figure>
+        <img src="images/phones.png" alt="Phones">
+      </figure>
+    </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+    <section>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="display-flex">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <img src = "images/brand.png" alt="Instagram">
 
-  &copy; 2014 Instagram
+        <a href="#">
+          <img src = "images/home.png" alt="Log in">
+          Log in
+        </a>
+      </div>
+
+      <article>
+        <header>
+          <h1>
+            Capture and Share the World's Moments
+          </h1>
+        </header>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <footer>
+          <a href="#">
+            <img src = "images/badge-iphone.png" alt="Download on the App Store">
+          </a>
+          <a href="#">
+            <img src = "images/badge-android.png" alt="Get it on Google Play">
+          </a>
+        </footer>
+      </article>
+
+    </section>
+
+  </main>
+  <footer>
+    
+      <ul class="display-flex">
+        <nav class="display-flex">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </nav>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    
+  </footer>
+  
 </body>
 </html>
