--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,6 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Instagram Clone</title>
+
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+</head>
+<body>
+  <main>
+    <figure>
+      <img src="images/phones.png" alt="Mobile sImage">
+    </figure>
+    <section>
+      <header>
+        <figure>
+          <img src="images/brand.png" title="Instagram Logo">
+        </figure>
+        <a class="instagram-button"><img src="images/home.png" alt="Home icon">Log In</a>
+      </header>
+      <article>
+        <h1>Capture and Share</br>
+        the World's Moments</h1>
+        <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
+      <figure>
+        <img src="images/badge-iphone.png" alt="Apple Store Badge">
+        <img src="images/badge-android.png" alt="Android Store Badge">
+      </figure>
+    </section>
+  </main>
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>© 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
   <title>Instagram</title>
 </head>
 <body>
@@ -28,4 +82,4 @@
 
   &copy; 2014 Instagram
 </body>
-</html>
+</html> -->
