--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,66 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+ <div class="fondo">
+  <header class="header-flex">
+<figure>
+  <img src="images/phones.png" alt="telefono movil">
+</figure>
 
-  Capture and Share the World's Moments
+<section class="main">
+  <header>
+  <div>
+  <a  href="index.html" alt="inicio">
+    <img src="images/brand.png" alt="logotipo">
+  </a>
+</div>
+<div class="boton">
+  <a href="#" alt="log-in">
+    <img src="images/home.png" alt="log-in">Log In</img>
+  </a>
+</div>
+</header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<article>
+  <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
+</article>
+<footer>
+  <div>
+    <a href="#" alt="Apple Store">
+      <img src="images/badge-iphone.png">
+    </a>
+  </div>
+  <div>
+    <a href="#" alt="Google Play">
+      <img src="images/badge-android.png">
+    </a>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</footer>
+</section>
 
-  &copy; 2014 Instagram
+</header>
+
+<footer class="footer-nav">
+ <a href="#">About Us</a>
+ <a href="#">Support</a>
+ <a href="#">Blog</a>
+ <a href="#">Press</a>
+ <a href="#">API</a>
+ <a href="#">Jobs</a>
+ <a href="#">Privacy</a>
+ <a href="#">Terms</a>
+ <p>&copy; 2014 Instagram</p>
+</footer>
+</div>
 </body>
 </html>
