está muy verde aun

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="generalSquare">
+    <img src="../starter-code/images/phones.png" alt="iphone">
+    <div class="rightColumn">
+      <div class="logos">
+        <img src="../starter-code/images/brand.png" alt="logo insta">
+        <button type="button">Login</button>
+      </div>
+      <div class="text">  
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class=button>
+          <img src="../starter-code/images/badge-iphone.png" alt="boton app store"><img>
+          <img src="../starter-code/images/badge-android.png" alt="boton google play"><img>
+        </div>
+      </div>
+    </div>
+  </div>
+<footer>  
+  <a href="url">About Us</a>
+  <a href="url">Support</a>
+  <a href="url">Blog</a>
+  <a href="url">Press</a>
+  <a href="url">API</a>
+  <a href="url">Jobs</a>
+  <a href="url">Privacy</a>
+  <a href="url">Terms</a>
+</footer>
 </body>
 </html>
