--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="container">
+    <div class="content-phones">
+      <img src="images/phones.png" alt="phones">
+    </div>
+    <div class="content-text">
+      <div class="header-brand">
+        <div class="brand">
+          <img src="images/brand.png" alt="instagram">
+        </div>
+        <div class="btn">
+          <img src="images/home.png" alt="home">
+          <p class="login">Log in</p>
+        </div>
+      </div>
+      <div class="description">
+        <h2>Capture and Share the World's Moments</h2>
+        <p class="text">Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+        <p class="text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p class="text">Oh yeah, did we mention it's free?</p>
+        <div class="logos-download">
+          <img src="images/badge-iphone.png" alt="Download on the App Store" class="img-margin-right">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="menu">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 </body>
 </html>
