--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div class="generalSquare">
-    <img src="../starter-code/images/phones.png" alt="iphone">
+    <img src="../starter-code/images/phones.png" class= "iphoneImg" alt="iphone">
     <div class="rightColumn">
       <div class="logos">
         <img src="../starter-code/images/brand.png" alt="logo insta">
@@ -34,6 +34,7 @@
   <a href="url">Jobs</a>
   <a href="url">Privacy</a>
   <a href="url">Terms</a>
+  <a href="url" class="name">2014 Instagram</a>
 </footer>
 </body>
 </html>
