--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--Title and info metas-->
   <title>Instagram</title>
+  <meta name="#" content="#">
+  <meta charset="UTF-8">
+  <!--styles-->
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<body class="align-center">
+  <main class="display-flex">
+    <section>
+      <figure>
+        <img src="./images/phones.png" alt="cell phones">
+      </figure>
+    </section>
+    <section class="main-section-b">
+      <section class="display-flex">
+        <figure>
+          <img src="./images/brand.png" alt="instragram logo">
+        </figure>
+        <div class="login-button">
+          <img src="./images/home.png" alt="log-in">
+          <a class="login-button-text" href="https://www.instagram.com/accounts/login/?source=auth_switcher">Log In</a>
+        </div>
+      </section>
+      <article>
+        <h1 class="darbluetext">Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div >
+            <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.signupPage.badge&mt=8&vt=lo">
+              <img src="./images/badge-iphone.png" alt="Download on the App Store">
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3D8A53ABDD-EE58-428C-8F31-69378DB1895A%26utm_content%3Dlo%26utm_medium%3Dbadge">
+              <img src="./images/badge-android.png" alt="Get it on Google Play">
+            </a>
+          </div>
+      </article>
+       
+    </section>
+  </main>
+  <footer class="align-center">
+    <nav class="align-center">
+      <a href="#">About Us</a> 
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      &copy; 2014 Instagram
+    </nav>
+      
+  </footer>
 </body>
 </html>
