No he podido hacerlo perfecto, pero lo importante es la intentcion

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,62 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="../starter-code/css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class="main-section">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <article class="phone-image">
+        <img src="../starter-code/images/phones.png" alt="Phones">
+    </article>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <article  class="main-block">
+        <header>
+          <img src="./images/brand.png" alt="Instagram Logo" id="instagram">
+          <div class="home-button">
+            <img src="images/home.png" alt="home-icon" id="home">
+            <a href="#">Log in</a>
+          </div>
+        </header>
+        <div class="white-background">
+          <div>
+              <h2>Capture and Share the World's Moments</h2>
+              <div>
+              <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+              </div>
+              <div>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              </div>
+              <div>
+                <p>Oh yeah, did we mention it's free?</p>
+              </div>
+          </div>
+          <a href="#">
+            <img src="../starter-code/images/badge-iphone.png" alt="Apple Store">
+          </a>
+          <a href="#">
+            <img src="images/badge-android.png" alt="Google Play">
+          </a>
+        </div>
+    </article>
 
-  Oh yeah, did we mention it's free?
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li id=copy>  &copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  &copy; 2014 Instagram
 </body>
 </html>
