--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body class="background">
+  <section class="section1">
+    <div class="phones">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <article>
+        <header>
+          <img src="images/brand.png" alt="Instagram">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <a class="login"href="#">
+              <img src="images/home.png" alt="home">
+              Log in
+            </a>
+          
+        </header>
+        <div class="content">
+            <h2>Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+            <p>Instagram is a <b>fast, beautiful </b>and <b>fun</b> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+    </article>
+  </section>
+
+<footer>
+  <nav>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <p>&copy; 2014 Instagram</p>
+  </ul>
+</footer>
+</nav>
 </body>
 </html>
