Versión final a falta de colocar correctamente algunos elementos.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body class="align-center">
-  <main class="display-flex">
+  <main class="display-flex align-center">
     <section>
       <figure>
         <img src="./images/phones.png" alt="cell phones">
@@ -42,7 +42,7 @@
        
     </section>
   </main>
-  <footer class="align-center">
+  <footer>
     <nav class="align-center">
       <a href="#">About Us</a> 
       <a href="#">Support</a>
@@ -53,8 +53,7 @@
       <a href="#">Privacy</a>
       <a href="#">Terms</a>
       &copy; 2014 Instagram
-    </nav>
-      
+    </nav> 
   </footer>
 </body>
 </html>
