--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,83 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<!-- div -->
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div>
 
-  Oh yeah, did we mention it's free?
+<!-- aside -->
 
-  Download on the App Store
-  Get it on Google Play
+<aside>
+  <img src="/home/mfernandezfreire/Documentos/W1/W1d1/lab-css-instagram-clone/starter-code/images/phones.png" alt="Imagen 
+  de dos telefonos">
+</aside>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<!-- section -->
 
-  &copy; 2014 Instagram
+<section>
+
+  <header>
+    <img src="/home/mfernandezfreire/Documentos/W1/W1d1/lab-css-instagram-clone/starter-code/images/brand.png" alt="">
+    <a class="button" href=""><img src="/home/mfernandezfreire/Documentos/W1/W1d1/lab-css-instagram-clone/starter-code/images/home.png" alt="">Log In</a>
+  </header>
+
+<!-- article -->
+
+  <article>
+
+    <h2>Capture and Share the World's Moments</h2>
+    <p>  Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+    <p>Oh yeah, did we mention it's free?</p>
+    
+    <div class="logos">
+      <img src="/home/mfernandezfreire/Documentos/W1/W1d1/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Logo Google Store">
+      <img src="/home/mfernandezfreire/Documentos/W1/W1d1/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Logo PlayStore">
+    </div>
+
+  </article>
+
+</section>
+
+</div>
+
+<!-- footer -->
+
+<footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>Instagram</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
+  
+
+  
+
+
+
+  
+  
+  
+  
+  
+  
+  
+  
+
+  
 </body>
 </html>
