Ejercicio terminado escepto algunos errores

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,15 +22,15 @@
 
     <section>
 
-      <div class="display-flex">
+      <header class="display-flex">
 
-        <img src = "images/brand.png" alt="Instagram">
+        <img class="imagen-logo" src = "images/brand.png" alt="Instagram">
 
-        <a href="#">
+        <a class= "boton-login display-flex" href="#">
           <img src = "images/home.png" alt="Log in">
           Log in
         </a>
-      </div>
+      </header>
 
       <article>
         <header>
@@ -39,7 +39,7 @@
           </h1>
         </header>
         <p>
-          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong> fun</strong> way to share your life with friends and family.
         </p>
         <p>
           Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -47,14 +47,14 @@
         <p>
           Oh yeah, did we mention it's free?
         </p>
-        <footer>
+        <figure class="display-flex">
           <a href="#">
             <img src = "images/badge-iphone.png" alt="Download on the App Store">
           </a>
           <a href="#">
             <img src = "images/badge-android.png" alt="Get it on Google Play">
           </a>
-        </footer>
+        </figure>
       </article>
 
     </section>
