--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="bluebox"></div>
+  <div class="main">
+    <div class="mainWrapper">
+      <div class="phonesContainer">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="contentContainer">
+        <nav>
+          <img src="./images/brand.png" alt="instagram logo" class="instagram">
+          <a class="loginbutton" href="#"><img src="./images/home.png" alt="home"><span>Log in</span></a>
+        </nav>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <section class="contentSection">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends
+            and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="storeButtons"> 
+            <img src="./images/badge-iphone.png" alt="app store" class="apple">
+            <img src="./images/badge-android.png" alt="google play" class="android">
+          </div>
+        </section>
+      </div>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <footer class="footer">
+      <ul class="links">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="copyrigth">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
 </body>
+
 </html>
