--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="all"> 
+    <div class="phone">
+      <img src="./images/phones.png" alt="phone">
+    </div>
+    <div class="second">
+      <div class="encabezado">
+        <img src="./images/brand.png" alt="logo">
+      <div class="box"> 
+        <img src="./images/home.png" alt="home">
+        <p>Log in</p>
+      </div>
+      
+      </div>
+    <div class="text">
+      <div class="text2">
+        <h2>Capture and Share the World's Moments</h2> 
+        <p>Instagram is a <strong>fast</strong> fast, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>   
+      </div>
+  <div class="end">   
+  <img src="./images/badge-iphone.png" alt="Download on the App Store" class="iphone">
+  <img src="./images/badge-android.png" alt="Get it on Google Play" > 
+    </div>
+    </div> 
+  </div>
+</div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+<footer> 
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="copyright">&copy; 2014 Instagram</li>
+  </ul>
+ </footer>
 </html>
