--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/reset.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="box-complete">
+  <section id="float">
+      <div class="left">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="right">
+        <div class="logo_button">
+          <img class="image-logo"src="./images/brand.png" alt="Instagram">
+          <button class="btn"><img src="./images/home.png"></i> Log in</button>
+        </div>
+        <div class="white-box">
+          <h2>Capture and Share</h2>
+          <h2>the World's Moments</h2>
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+            <img src="./images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
+      </div>
+    </section>
+  <footer>
+    <div>
+      <ul class="footer-menu">
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+    </div>
+    <div>&copy; 2014 Instagram</div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</section>
+</div>
 </body>
 </html>
