--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="../starter-code/css/main.css")>
 </head>
 <body>
-  Instagram
+  <div class="div-global">
+      <img src="./images/phones.png" alt="phone image">
+      <div class="content">
 
-  Capture and Share the World's Moments
+          <div class="header-logo"> 
+              <img class="logo" src="./images/brand.png" alt="instagram-logo">
+              <div class="login-button">
+                  <img src="images/home.png" alt="login-image">
+                  <p><strong>Log in</strong></p>
+              </div>
+          </div>
+          <div class="paragraphs">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>            
+          </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <div class="buttons">
+            <img src="./images/badge-iphone.png" alt="badge-iphone">
+            <img src="./images/badge-android.png" alt="badge-android">
+          </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      </div>    
+    
+  </div>
+  <footer>
+      <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+      </ul>
+      <span>&copy; 2014 Instagram</span>
+  </footer>
 </body>
 </html>
+
