--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="container">
+    <div id="main">
+        <div id="main-center">
+          <div class="phones"></div>
+          <div class="right-content">
+              <div class="pics">
+                <div class="logo"></div>
+                <button class="login">
+                    <span class="buttonimage"><img src="images/home.png" alt="Log in"></span>
+                    <span class='buttontext'>Log in</span>
+                </button>
+                <!-- <div class="login"><img src="images/home.png" alt="Log in">  Log in</div> -->
+              </div>
+              <div class="capture">
+                <h2>Capture and Share <br>the World's Moments</h2>
+                <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+                <div class="buttonlinks">
+                    <div class="appstore"><img src="images/badge-iphone.png" alt="Download on the App Store"></div>
+                    <div class="googleplay"><img src="images/badge-android.png" alt="Get it on Google Play"></div>
+                 </div> 
+            </div>
+          </div>
+      </div>
+      <div id="footer">
+        <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="grey">&copy; 2014 Instagram</li>
+      </ul>
+      </div>    
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
 </body>
 </html>
